fix header logo z-index

--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -19,6 +19,7 @@
   background-size: contain;
   margin: 10px 20px;
   text-indent: -9999px;
+  z-index: 100;
 }
 
 .nav {
